tests/semantic_error/gv2_args_errados.g
/* erro: numero errado de argumentos na chamada */
funcao [
  soma(a : int, b : int) : int
  {
    retorne a + b;
  }
]

principal {
  escreva soma(1);
  novalinha;
}
